# ferris

./: .gitmodules  Cargo.toml  build.sh  rust-toolchain.toml  x86_64-ferris.json
.cargo/: config.toml
ferris_os/: Cargo.toml
ferris_os/src/: main.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  vga.rs
