[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9.8"
x86_64 = { version = "0.14.13", default-features = false, features = ["abi_x86_interrupt"] }
uart_16550 = { version = "0.2.19", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
volatile = "0.2.7"

[build-dependencies]
bootimage = "0.10.3"

[features]
default = []

